--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,52 @@
+annotated-types==0.7.0
+anyio==4.10.0
 asgiref==3.9.1
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+distro==1.9.0
 Django==4.2.23
+django-cors-headers==4.7.0
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+drf-yasg==1.21.10
+exceptiongroup==1.3.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+inflection==0.5.1
+jiter==0.10.0
+numpy==2.0.2
+oauthlib==3.3.1
+openai==1.99.6
+packaging==25.0
+pgvector==0.4.1
+pillow==11.3.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+PyJWT==2.10.1
+pyparsing==3.2.3
+python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+requests-oauthlib==2.0.0
+rsa==4.9.1
+sniffio==1.3.1
 sqlparse==0.5.3
+tqdm==4.67.1
+typing-inspection==0.4.1
 typing_extensions==4.14.1
+uritemplate==4.2.0
+urllib3==2.5.0
