--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ inflection==0.5.1
 packaging==25.0
 psycopg2==2.9.10
 PyJWT==2.10.1
+PyPDF2==3.0.1
 python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.2
